--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": "^18.13.0",
+    "npm": "^8.19.3"
+  },
   "dependencies": {
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
